--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           <label class="ad-form__label" for="title">Заголовок объявления</label>
           <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" minlength="30" maxlength="100" required>
         </fieldset>
-        <fieldset disabled class="ad-form__element ad-form__element--wide">
+        <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
-          <input id="address" name="address" type="text" value="35.6839, 139.75323">
+          <input id="address" name="address" type="text" value="35.6839, 139.75323" readonly>
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
